# gumo_engine

./: .gitignore  CMakeLists.txt  README.md  docs  entry_point.c  gumo.h
examples/sandbox/: CMakeLists.txt  main.c
examples/sandbox/resources/shaders/: default_shader.glsl  simple_shader.glsl
include/gumo/: application.h  core.h  entry_point.h  input.h  logger.h  main.h  math.h  resource_manager.h  window.h
include/gumo/renderer/: buffer.h  camera.h  graphics_context.h  renderer.h  renderer_2d.h  shader.h  texture.h  vertex_array.h
resources/shaders/: default_texture.glsl  default_texture.vert  flat_color.vert
source/: CMakeLists.txt  application.c  input.c  logger.c  math.c  resource_manager.c  window.c
source/renderer/: buffer.c  camera.c  graphics_context.c  renderer.c  renderer_2d.c  shader.c  texture.c  vertex_array.c
